add layout projects page

--- a/src/styles/partials/_utilities.scss
+++ b/src/styles/partials/_utilities.scss
@@ -1,3 +1,45 @@
 .z_index {
     z-index: 100;
 }
+
+.no_outline {
+    outline: none !important;
+}
+
+
+.m_main {
+    padding-top: 80px;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.card_shadow {
+    filter: drop-shadow(2px 5px 5px rgba(42, 42, 42, 0.844))
+}
+
+
+
+//TEXT SELECTOR
+
+.text_shadow {
+    text-shadow: 1px 1px 1px rgba(33, 33, 33, 0.622);
+}
+
+.text_shadow2 {
+    text-shadow: 1px 2px 3px black;
+}
+
+.text_blue_night {
+    color: rgb(4, 4, 148);
+
+}
+
+.font_w500 {
+    font-weight: 500;
+}
+
+.font_s11 {
+    font-size: 11px;
+}
