--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,8 @@
 // Import all of Bootstrap's CSS
 @use "./partials/utilities.scss" as *;
+@use "./partials/hover.scss" as *;
+@use "./partials/animation.scss" as *;
+@use "./partials/header.scss" as *;
+@use "./partials/main.scss" as *;
 @import "/node_modules/bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Comforter&family=Fasthand&family=Poppins:wght@300;400;500;600;700;900&display=swap');
