add first presentation

--- a/src/styles/partials/_utilities.scss
+++ b/src/styles/partials/_utilities.scss
@@ -43,3 +43,18 @@
 .font_s11 {
     font-size: 11px;
 }
+
+
+.vh_100 {
+    height: 100vh;
+}
+
+
+.nav_link {
+    text-decoration: none;
+    padding: 10px 0 10px 30px;
+    display: block;
+    color: #212529;
+    transition-duration: 0.4s;
+
+}
