--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -1,3 +1,13 @@
 header {
     font-family: 'Poppins', sans-serif;
 }
+
+
+.nav_link {
+    text-decoration: none;
+    padding: 10px 0 10px 30px;
+    display: block;
+    color: #212529;
+    transition-duration: 0.4s;
+
+}
