--- a/src/styles/partials/_main.scss
+++ b/src/styles/partials/_main.scss
@@ -1,5 +1,5 @@
 .main_container {
-    font-family: 'Poppins', sans-serif;
+
 
 
 
@@ -29,9 +29,15 @@
         h6 {
             transition-duration: 0.5s;
         }
+
+
     }
 
 
+}
+
+.bi-arrow-up-square {
+    transition-duration: 0.4s;
 }
 
 .fake_background {
