--- a/src/styles/partials/views/_about.scss
+++ b/src/styles/partials/views/_about.scss
@@ -7,3 +7,31 @@
         top: 66px;
     }
 }
+
+
+
+
+
+.about-section {
+    background-color: #f7f7f7;
+    padding: 100px 0;
+}
+
+.profile-image {
+    max-width: 100%;
+    border-radius: 35px;
+}
+
+.about-content {
+    padding-left: 40px;
+}
+
+.about-content h2 {
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.about-content p {
+    font-size: 18px;
+    line-height: 1.5;
+}
