--- a/src/styles/partials/_animation.scss
+++ b/src/styles/partials/_animation.scss
@@ -162,3 +162,94 @@
         opacity: 1;
     }
 }
+
+//CASCADE EFFECT
+
+#cascading-effect-heading span {
+    opacity: 0;
+    position: relative;
+    top: -70px;
+    transition: opacity 0.5s ease-in-out, top 0.5s ease-in-out;
+    z-index: 90;
+}
+
+
+// balls effect
+
+
+#container {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.ball {
+    position: absolute;
+    border-radius: 50%;
+    background-color: gray;
+    // transition: all 0.5s ease;
+    transition-duration: 3.5s;
+    transition-timing-function: ease-in-out;
+    // filter: drop-shadow(0px 0px 3px rgb(54, 54, 54));
+}
+
+.ball-1 {
+    width: 20px;
+    height: 20px;
+    top: 50px;
+    left: 50px;
+}
+
+.ball-2 {
+    width: 20px;
+    height: 20px;
+    top: 100px;
+    left: 100px;
+    z-index: 50;
+}
+
+.ball-3 {
+    width: 30px;
+    height: 30px;
+    top: 150px;
+    left: 150px;
+    z-index: 50;
+}
+
+.ball-4 {
+    width: 30px;
+    height: 30px;
+    top: 200px;
+    left: 200px;
+}
+
+.ball-5 {
+    width: 15px;
+    height: 15px;
+    top: 250px;
+    left: 250px;
+    z-index: 50;
+}
+
+.ball-6 {
+    width: 10px;
+    height: 10px;
+    top: 250px;
+    left: 250px;
+    z-index: 50;
+}
+
+.ball-7 {
+    width: 40px;
+    height: 40px;
+    top: 250px;
+    left: 250px;
+}
+
+.ball-8 {
+    width: 25px;
+    height: 25px;
+    top: 250px;
+    left: 250px;
+}
