--- a/src/styles/partials/views/_contacts.scss
+++ b/src/styles/partials/views/_contacts.scss
@@ -4,8 +4,9 @@
     .business_card {
         background-color: rgb(234, 234, 234);
         border-radius: 35px;
+        margin: 15px;
         filter: drop-shadow(7px 9px 9px rgb(54, 54, 54));
-
+        max-width: 497px;
 
     }
 
