--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,4 +1,5 @@
 // Import all of Bootstrap's CSS
+@use "./partials/variables" as *;
 @use "./partials/views/about" as *;
 @use "./partials/views/contacts" as *;
 @use "./partials/utilities.scss" as *;
