create a single project in view with axios in it

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -2,6 +2,7 @@
 @use "./partials/variables" as *;
 @use "./partials/views/about" as *;
 @use "./partials/views/contacts" as *;
+@use "./partials/views/single_project.scss" as *;
 @use "./partials/utilities.scss" as *;
 @use "./partials/hover.scss" as *;
 @use "./partials/animation.scss" as *;
