--- a/src/styles/partials/views/_contacts.scss
+++ b/src/styles/partials/views/_contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-    min-height: 100vh;
+    height: calc(100vh - 66px);
 
     .business_card {
         background-color: rgb(234, 234, 234);
