--- a/src/styles/partials/_animation.scss
+++ b/src/styles/partials/_animation.scss
@@ -216,7 +216,7 @@
 
 #container {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 66px);
     position: relative;
     overflow: hidden;
 }
@@ -225,10 +225,8 @@
     position: absolute;
     border-radius: 50%;
     background-color: gray;
-    // transition: all 0.5s ease;
     transition-duration: 3.5s;
     transition-timing-function: ease-in-out;
-    // filter: drop-shadow(0px 0px 3px rgb(54, 54, 54));
 }
 
 .ball-1 {
