--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -15,3 +15,22 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+
+//CUSTOMATION SCROLL BAR 
+
+*::-webkit-scrollbar {
+    width: 8px;
+    /* Imposta la larghezza della scrollbar */
+}
+
+*::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    /* Colore di sfondo della scrollbar */
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: $clr_street;
+    border-radius: 5px;
+    /* Thumb trasparente */
+}
