--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -1,7 +1,6 @@
 header {
     font-family: 'Poppins', sans-serif;
     z-index: 10000;
-    height: 66px;
 
 
 }
@@ -18,4 +17,15 @@ header {
 
 .logo_filter {
     opacity: 0.7;
+}
+
+.selected_link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 100%;
+    height: 1.5px;
+    background-color: #000;
+    transition: width 0.3s ease-in-out
 }
