--- a/src/styles/partials/_hover.scss
+++ b/src/styles/partials/_hover.scss
@@ -52,3 +52,17 @@
 .scale_hover:hover {
     transform: scale(1.1);
 }
+
+
+//combo scale
+
+.scale_0 {
+    transform: scale(0);
+    transition: 0.5s;
+    width: 0;
+}
+
+.appear_with_scale:hover svg {
+    transform: scale(1) !important;
+    width: 20px;
+}
