--- a/src/styles/partials/_animation.scss
+++ b/src/styles/partials/_animation.scss
@@ -296,3 +296,65 @@
     top: 250px;
     left: 250px;
 }
+
+
+
+
+
+//background image
+
+
+.shape_container {
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+
+
+}
+
+.position1 {
+    left: -20px;
+    bottom: -200px;
+
+    .shape {
+        background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+        animation: morph 8s ease-in-out infinite;
+        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+        height: 240px;
+        transition: all 1s ease-in-out;
+        width: 250px;
+        background-color: #ececec;
+    }
+}
+
+.position2 {
+    right: 0 !important;
+    top: -200px;
+
+    .shape {
+        background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+        animation: morph 8s ease-in-out infinite;
+        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+        height: 400px;
+        transition: all 1s ease-in-out;
+        width: 400px;
+        background-color: aliceblue;
+    }
+}
+
+
+
+@keyframes morph {
+    0% {
+        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    }
+
+    50% {
+        border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%;
+    }
+
+    100% {
+        border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    }
+}
