--- a/src/styles/partials/_hover.scss
+++ b/src/styles/partials/_hover.scss
@@ -1,10 +1,13 @@
+@use "./variables" as *;
+
+
 .invert:hover {
     filter: invert(1);
 }
 
 .lighter {
     transition: 0.4s;
-    color: #f1b504 !important;
+    color: $hay !important;
     filter: drop-shadow(1px 2px 3px black);
 
 }
