--- a/src/styles/partials/_animation.scss
+++ b/src/styles/partials/_animation.scss
@@ -149,6 +149,23 @@
     }
 }
 
+.fade_right5 {
+    animation: fade_right5 1s ease-out 1.8s both;
+}
+
+@keyframes fade_right5 {
+    from {
+        right: -60px;
+        opacity: 0;
+    }
+
+
+    to {
+        right: 0px;
+        opacity: 1;
+    }
+}
+
 
 .ghost {
     animation: ghost 0.5s ease-out 1s both;
@@ -165,8 +182,28 @@
     }
 }
 
+
+
+
+.content_stretch {
+    width: 0%;
+    animation: content_stretch 1s ease-out 3s both;
+}
+
+
+@keyframes content_stretch {
+    from {
+        width: 0%;
+    }
+
+
+    to {
+        width: 100%;
+    }
+}
+
 .ghost2 {
-    animation: ghost2 0.5s ease-out 3s both;
+    animation: ghost2 0.5s ease-out 5.5s both;
 }
 
 @keyframes ghost2 {
@@ -211,12 +248,14 @@
 }
 
 
-// balls effect
+
+
+// BALLS ANIMATED BACKGROUND
 
 
 #container {
     width: 100%;
-    height: calc(100vh - 66px);
+    height: calc(100vh - 86px);
     position: relative;
     overflow: hidden;
 }
@@ -224,7 +263,8 @@
 .ball {
     position: absolute;
     border-radius: 50%;
-    background-color: gray;
+    background: rgb(255, 255, 255);
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(175, 185, 185, 1) 0%, rgba(0, 0, 0, 0.9445028011204482) 100%);
     transition-duration: 3.5s;
     transition-timing-function: ease-in-out;
 }
@@ -297,11 +337,34 @@
     left: 250px;
 }
 
+.ball-9 {
+    width: 35px;
+    height: 35px;
+    top: 250px;
+    left: 250px;
+}
+
+.ball-10 {
+    width: 5px;
+    height: 5px;
+    top: 250px;
+    left: 250px;
+    z-index: 50;
+}
+
+.ball-11 {
+    width: 15px;
+    height: 15px;
+    top: 250px;
+    left: 250px;
+    z-index: 50;
+}
 
 
 
 
-//background image
+
+//SHAPES in WELCOME background
 
 
 .shape_container {
@@ -358,3 +421,105 @@
         border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
     }
 }
+
+
+
+//TITLE EFFECT 
+
+
+
+// .container_title {
+//     width: 9.25em;
+//     height: 1.15em;
+//     font-size: 4rem;
+//     position: relative;
+// }
+
+// .container_title div {
+//     position: absolute;
+//     left: 0;
+//     text-transform: uppercase;
+//     width: 100%;
+//     display: block;
+//     text-align: center;
+// }
+
+// .upper {
+//     top: 0;
+//     height: 52.5%;
+//     color: #121212;
+//     overflow: hidden;
+//     z-index: 3;
+//     animation: moveUp 1s ease-in-out 1 1.5s both;
+//     background-color: #f4f4f4;
+
+// }
+
+// .lower {
+//     bottom: 0;
+//     color: #121212;
+//     height: 100%;
+//     background: linear-gradient(180deg, #f4f4f4 52.5%, #121212 52.5%);
+//     color: transparent;
+//     background-clip: text;
+//     -webkit-background-clip: text;
+//     z-index: 1;
+//     animation: moveDown 1s ease-in-out 1 2.5s both;
+// }
+
+// .inside_title {
+//     position: absolute;
+//     top: 40%;
+//     font-weight: 500;
+//     transform: translateY(-40%);
+//     text-align: center;
+//     z-index: 2;
+//     font-size: 1rem;
+//     color: #121212;
+// }
+
+// @keyframes moveUp {
+
+//     0% {
+//         top: 0;
+//     }
+
+
+//     100% {
+//         top: -45px;
+//     }
+// }
+
+// @keyframes moveDown {
+
+//     0% {
+//         top: 0;
+//     }
+
+
+//     100% {
+//         top: 30px;
+//     }
+// }
+
+// @media (max-width: 424px) {
+//     .container_title {
+//         font-size: 2.5rem;
+
+//     }
+
+//     .inside_titl {
+//         font-size: 0.75rem;
+//     }
+// }
+
+// @media (max-width: 320px) {
+//     .container_title {
+//         font-size: 2rem;
+
+//     }
+
+//     .inside_title {
+//         font-size: 0.5rem;
+//     }
+// }
