--- a/src/styles/partials/views/_single_project.scss
+++ b/src/styles/partials/views/_single_project.scss
@@ -11,6 +11,11 @@
         background-color: rgb(255, 255, 255);
     }
 
+    .overlay {
+        background-color: rgba(0, 0, 0, 0.653);
+        opacity: 0;
+    }
+
     img {
         object-fit: cover;
         min-height: 200px;
