--- a/src/styles/partials/views/_contacts.scss
+++ b/src/styles/partials/views/_contacts.scss
@@ -97,6 +97,7 @@
         width: 20px;
         height: 20px;
         animation-delay: 4s;
+
     }
 
     .circles li:nth-child(4) {
@@ -105,6 +106,7 @@
         height: 60px;
         animation-delay: 0s;
         animation-duration: 18s;
+
     }
 
     .circles li:nth-child(5) {
@@ -112,6 +114,7 @@
         width: 20px;
         height: 20px;
         animation-delay: 0s;
+
     }
 
     .circles li:nth-child(6) {
@@ -142,6 +145,7 @@
         height: 15px;
         animation-delay: 2s;
         animation-duration: 35s;
+
     }
 
     .circles li:nth-child(10) {
@@ -159,13 +163,17 @@
         0% {
             transform: translateY(0) rotate(0deg);
             opacity: 1;
-            border-radius: 0;
+            border-radius: 0%;
+        }
+
+        20% {
+            border-radius: 0%;
         }
 
         100% {
             transform: translateY(-1000px) rotate(720deg);
             opacity: 0;
-            border-radius: 50%;
+            border-radius: 100%
         }
 
     }
