--- a/src/styles/partials/_animation.scss
+++ b/src/styles/partials/_animation.scss
@@ -168,10 +168,25 @@
 
 
 .ghost {
-    animation: ghost 0.5s ease-out 1s both;
+    animation: ghost 0.5s ease-out both;
 }
 
 @keyframes ghost {
+    from {
+        opacity: 0;
+    }
+
+
+    to {
+        opacity: 1;
+    }
+}
+
+.ghost3 {
+    animation: ghost3 0.5s ease-out 0.2s both;
+}
+
+@keyframes ghost3 {
     from {
         opacity: 0;
     }
@@ -203,7 +218,7 @@
 }
 
 .ghost2 {
-    animation: ghost2 0.5s ease-out 5.5s both;
+    animation: ghost2 0.5s ease-out 1s both;
 }
 
 @keyframes ghost2 {
@@ -370,18 +385,20 @@
 .shape_container {
     align-items: center;
     display: flex;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
 
 
 }
 
 .position1 {
-    left: -20px;
-    bottom: -200px;
+    left: -37px;
+    bottom: -305px;
 
     .shape {
-        background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+        // background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+        background: linear-gradient(#ccc 25%, #ddd 55%);
+
         animation: morph 8s ease-in-out infinite;
         border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
         height: 240px;
@@ -396,7 +413,7 @@
     top: -200px;
 
     .shape {
-        background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
+        background: linear-gradient(#1f1f1f 25%, #333333 55%);
         animation: morph 8s ease-in-out infinite;
         border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
         height: 400px;
@@ -422,6 +439,92 @@
     }
 }
 
+//LATEST TITLE EFFECT
+
+// @import url('https://fonts.googleapis.com/css?family=Roboto:700');
+
+@keyframes showTopText {
+    0% {
+        transform: translate3d(0, 100%, 0);
+    }
+
+    40%,
+    60% {
+        transform: translate3d(0, 50%, 0);
+    }
+
+    100% {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes showBottomText {
+    0% {
+        transform: translate3d(0, -100%, 0);
+    }
+
+    100% {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.animated-title {
+    // color: #222;
+    // font-family: Roboto, Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    // position: absolute;
+    // left: 60%;
+    // top: 50%;
+    // transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+.animated-title>div {
+    height: 50%;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
+.animated-title>div div {
+    padding: 1vmin 0;
+    position: relative;
+}
+
+.animated-title>div div span {
+    display: block;
+}
+
+.animated-title>div.text-top {
+    border-bottom: 3px solid #908f8f;
+
+    top: 0;
+}
+
+.animated-title>div.text-top div {
+    animation: showTopText 1s;
+    animation-delay: 0.5s;
+    animation-fill-mode: forwards;
+    bottom: 0;
+    transform: translate(0, 100%);
+}
+
+
+.animated-title>div.text-bottom {
+    bottom: 0;
+}
+
+.animated-title>div.text-bottom div {
+    animation: showBottomText 0.5s;
+    animation-delay: 1.75s;
+    animation-fill-mode: forwards;
+    top: 0;
+    transform: translate(0, -100%);
+
+}
 
 
 //TITLE EFFECT 
