fix responsive function of home page

--- a/src/styles/partials/_animation.scss
+++ b/src/styles/partials/_animation.scss
@@ -405,6 +405,7 @@
         transition: all 1s ease-in-out;
         width: 250px;
         background-color: #ececec;
+        // filter: drop-shadow(2px 2px 5px rgb(120, 120, 120))
     }
 }
 
@@ -420,6 +421,7 @@
         transition: all 1s ease-in-out;
         width: 400px;
         background-color: aliceblue;
+        // filter: drop-shadow(2px 2px 5px rgb(51, 51, 51))
     }
 }
 
