CHange layout home page

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -16,6 +16,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    // overflow-x: hidden;
     // background: linear-gradient(141deg, #ccc 25%, #eee 40%, #ddd 55%);
 }
 
