--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,4 +3,4 @@
 $clr_snow : rgb(244, 244, 244);
 $clr_street : rgba(173, 171, 171, 0.879);
 $hay: #f1b504;
-$clr_carbon: #131313;
+$clr_carbon: #1f1f1f;
