--- a/src/styles/partials/views/_contacts.scss
+++ b/src/styles/partials/views/_contacts.scss
@@ -51,6 +51,8 @@
         background: -webkit-linear-gradient(to left, #f4f4f4, #bebebe);
         width: 100%;
         height: calc(100vh - 86px);
+        height: 100%;
+
 
 
     }
@@ -60,7 +62,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: calc(100vh - 100px);
         overflow: hidden;
     }
 
@@ -177,4 +179,133 @@
         }
 
     }
+}
+
+
+
+//MIRROR CIRCLE EFFECT 
+
+.circles2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 100px);
+    overflow: hidden;
+}
+
+.circles2 li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(51, 48, 48, 0.715);
+    animation: animate2 25s linear infinite;
+    bottom: -150px;
+
+}
+
+.circles2 li:nth-child(1) {
+    left: 85%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 0s;
+}
+
+
+.circles2 li:nth-child(2) {
+    left: 5%;
+    width: 10px;
+    height: 10px;
+    animation-delay: 2s;
+    animation-duration: 9s;
+}
+
+.circles2 li:nth-child(3) {
+    left: 23%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 4s;
+
+}
+
+.circles2 li:nth-child(4) {
+    left: 50%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 0s;
+    animation-duration: 12s;
+
+}
+
+.circles2 li:nth-child(5) {
+    left: 15%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 5s;
+
+}
+
+.circles2 li:nth-child(6) {
+    left: 65%;
+    width: 65px;
+    height: 65px;
+    animation-delay: 3s;
+}
+
+.circles2 li:nth-child(7) {
+    left: 75%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 7s;
+}
+
+.circles2 li:nth-child(8) {
+    left: 20%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 35s;
+}
+
+.circles2 li:nth-child(9) {
+    left: 40%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+
+}
+
+.circles2 li:nth-child(10) {
+    left: 15%;
+    width: 75px;
+    height: 75px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+
+
+@keyframes animate2 {
+
+    0% {
+        transform: rotate(0deg);
+        top: 0;
+        opacity: 1;
+        border-radius: 0%;
+    }
+
+    20% {
+        border-radius: 0%;
+    }
+
+    100% {
+        transform: rotate(720deg);
+        top: 100%;
+        opacity: 0;
+        border-radius: 100%
+    }
+
 }
