--- a/src/styles/partials/_carousel.scss
+++ b/src/styles/partials/_carousel.scss
@@ -1,3 +1,60 @@
-.carousel {
+.carousel_container {
     height: 100px;
+
+    .container {
+
+        max-width: 1920px !important;
+
+        .shadow_limit {
+            width: 0;
+            height: 100%;
+            box-shadow: 0 0 10px black;
+        }
+
+        .shadow_element,
+        .shadow_element2 {
+            width: 70px;
+            background: rgb(244, 244, 244);
+            background: linear-gradient(90deg, rgba(244, 244, 244, 1) 0%, rgba(34, 68, 68, 0) 100%);
+            z-index: 10;
+        }
+
+        .shadow_element {
+            left: 0;
+        }
+
+        .shadow_element2 {
+            right: 0;
+            transform: rotate(180deg);
+        }
+
+        .carousel {
+            height: 100px;
+            width: calc(100% + 160px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+
+
+            .img_container {
+                display: inline-block;
+                margin: 0 15px;
+                width: 120px;
+                text-align: center;
+                // display: flex;
+                justify-content: center;
+                // transition: transform 1s linear;
+
+
+            }
+
+        }
+
+    }
+
 }
+
+//ANIMATION 
+
+@keyframes slide_left {}
