--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -5,6 +5,7 @@
 @use "./partials/views/single_project.scss" as *;
 @use "./partials/utilities.scss" as *;
 @use "./partials/hover.scss" as *;
+@use "./partials/spinner_loader.scss" as *;
 @use "./partials/media_query.scss" as *;
 @use "./partials/animation.scss" as *;
 @use "./partials/header.scss" as *;
