--- a/src/styles/partials/views/_about.scss
+++ b/src/styles/partials/views/_about.scss
@@ -15,7 +15,7 @@
     .profile_image {
         max-width: 100%;
         border-radius: 35px;
-        margin-top: 30px;
+        // margin-top: 30px;
     }
 
 
